--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/.idea/misc.xml
+/pasture/api/models.py
+/.idea/modules.xml
+/.idea/Pasture.iml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/vcs.xml
