--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ django-neomodel==0.0.6
 django-restframework==0.0.1
 django-timezone-field==4.1.2
 djangorestframework==3.12.4
+djangorestframework-simplejwt==5.0.0
 djangorestframework_camel_case~=1.2.0
 importlib-metadata==4.6.1
 kombu==5.1.0
