--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-git+git://github.com/shephexd/linchfin@develop
 amqp==5.0.6
 asgiref==3.2.10
 billiard==3.6.4.0
@@ -32,6 +31,7 @@ sqlparse==0.4.1
 vine==5.0.0
 wcwidth==0.2.5
 zipp==3.5.0
-drf-spectacular==0.18.0
+drf-spectacular==0.22.1
+drf-spectacular-sidecar==2022.6.1
 django-heroku~=0.3.1
 gunicorn==20.1.0
