--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,6 +1,6 @@
 server {
-	listen 8000 default_server;
-	listen [::]:8000 default_server;
+	listen 8080 default_server;
+	listen [::]:8080 default_server;
 
 	# SSL configuration
 	#
@@ -26,9 +26,8 @@ server {
 	server_name _;
 
         location / {
-            proxy_pass http://localhost:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            include         uwsgi_params;
+            uwsgi_pass unix:/tmp/gunicorn.sock;
 	    }
 
         location /static/ {
