UPDATE Nginx setting

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -2,6 +2,7 @@ server {
 	listen 8080 default_server;
 	listen [::]:8080 default_server;
 
+    user pasture;
 	# SSL configuration
 	#
 	# listen 443 ssl default_server;
