--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -25,12 +25,22 @@ server {
 
 	server_name _;
 
-        location / {
-            include         uwsgi_params;
-            uwsgi_pass unix:/tmp/gunicorn.sock;
-	    }
+    location / {
+        include         uwsgi_params;
+        uwsgi_pass unix://tmp/gunicorn.sock;
+    }
 
-        location /static/ {
-            alias /app/pasture/resources/static;
-        }
+    location /static {
+        alias /app/pasture/resources/static;
+        autoindex off;
+        expires 12h;
+        try_files $uri $uri/ =404;
+    }
+
+    location /media {
+        alias /app/pasture/resources/media;
+        autoindex off;
+        expires 12h;
+        try_files $uri $uri/ =404;
+    }
 }
