--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.2.0
 Django==3.1
+django-admin-rangefilter==0.9.0
 django-celery-beat==2.2.0
 django-celery-results==2.1.0
 django-cors-headers==3.7.0
