--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
 amqp==5.0.6
 asgiref==3.2.10
 billiard==3.6.4.0
-celery==5.1.1
+celery~=5.2.7
 click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.2.0
-Django==3.1
+Django~=4.0.5
 django-admin-rangefilter==0.9.0
 django-celery-beat==2.2.0
 django-celery-results==2.1.0
 django-cors-headers==3.7.0
 django-extensions==3.1.3
-django-filter==2.4.0
+django-filter~=21.1
 django-neomodel==0.0.6
 django-restframework==0.0.1
 django-timezone-field==4.1.2
-djangorestframework==3.12.4
+djangorestframework~=3.13.1
 djangorestframework-simplejwt==5.0.0
 djangorestframework_camel_case~=1.2.0
 importlib-metadata==4.6.1
