--- a/requirements.txt
+++ b/requirements.txt
@@ -8,17 +8,16 @@ click-plugins==1.1.1
 click-repl==0.2.0
 Django~=4.0.5
 django-admin-rangefilter==0.9.0
-django-celery-beat==2.2.0
-django-celery-results==2.1.0
-django-cors-headers==3.7.0
-django-extensions==3.1.3
+django-celery-beat==2.3.0
+django-celery-results==2.3.1
+django-cors-headers==3.12.0
+django-extensions==3.1.5
 django-filter~=21.1
-django-neomodel==0.0.6
-django-restframework==0.0.1
-django-timezone-field==4.1.2
+django-neomodel==0.0.7
+django-timezone-field==5.0
 djangorestframework~=3.13.1
-djangorestframework-simplejwt==5.0.0
-djangorestframework_camel_case~=1.2.0
+djangorestframework-simplejwt==5.2.0
+djangorestframework_camel_case~=1.3.0
 importlib-metadata==4.6.1
 kombu==5.1.0
 Markdown==3.3.4
@@ -35,3 +34,4 @@ drf-spectacular==0.22.1
 drf-spectacular-sidecar==2022.6.1
 django-heroku~=0.3.1
 gunicorn==20.1.0
+requests~=2.24.0
