--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-timezone-field==5.0
 djangorestframework~=3.13.1
 djangorestframework-simplejwt==5.2.0
 djangorestframework_camel_case~=1.3.0
+graphene-django==3.0.2
 importlib-metadata==4.6.1
 kombu==5.2.4
 Markdown==3.3.4
